syntax = "proto3";

package storage;

service StorageService {
  rpc Upload (UploadRequest) returns (UploadResponse);
  rpc GetPresignedUrl (GetPresignedUrlRequest) returns (GetPresignedUrlResponse);
}

message UploadRequest {
  string filename = 1;
  bytes data = 2;
  string bucket = 3;
  string mimeType = 4;
}

message UploadResponse {
  string url = 1;
}

message GetPresignedUrlRequest {
  string bucket = 1;
  string key = 2;
  int32 expiry = 3;
}

message GetPresignedUrlResponse {
  string url = 1;
}
